# AlterLaunch

./: CMakeLists.txt  README.txt  compatibilitytool.vdf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolmanifest.vdf
